# ewatercycle_model_testing

./: .gitignore  .gitlab-ci.yml  README.md  environment.yml  main.py  pyproject.toml  setup.cfg  setup.py
docs/: How_To_Make_A_Test.ipynb  How_To_Run_Tests_Locally.ipynb  How_To_Verify_Your_Model.md  IncorporationNotes.md  Packaging.md  SetupGuideWindows.md
grdc-observations/: 6335020_Q_Day.Cmd.txt  6335080_Q_Day.Cmd.txt  6435060_Q_Day.Cmd.txt
src/ewatercycle_model_testing/: bmi_spec_tests.py  constants.py  error_tests.py  ewatercycle.yaml  main.py  metric_tests.py  mocks.py  need_to_test.txt  parse_submission.py  plugin_owner_select_tests.py  plugin_owner_select_tests_ui.py  plugin_owner_visualise_output.py  plugin_owner_visualise_output_ui.py  run_debug_tools_locally.py  run_model_util.py  scenario_tests.py  scenarios_util.py  spec_tests.py  test.py  test_bank.py  test_report_maker.py  test_result.py  test_suite.py
tests/: exampleLeakyBucketSubmissionFile.yml  exampleWflowSubmissionFile.yml  test_models_modification_tests.py  test_plugin_submission_tests.py  validate_bmi_spec_tests.py  validate_end_to_end.py  validate_error_tests.py  validate_integration.py  validate_metric_tests.py  validate_plugin_owner_test_ui.py  validate_scenario_tests.py  validate_scenarios_util.py  validate_spec_tests.py  validate_test.py  validate_test_bank.py  validate_test_report_maker.py  validate_test_suite.py
workflows/: Exceptions.py  constants.py  exampleSubmissionFile.yml  models_modification_tests.py  plugin_submission_tests.py  pullCheck.yml  submission.yml  upload-test-results.yaml
workflows/submissionMocks/: badreponamemodels.txt  badsubmission.yml  emptysubmission.yml  models.txt  submission.yml
(+13 files in other folders)
