# Like specified in the eWatercycle repository
# https://github.com/eWaterCycle/ewatercycle/blob/main/setup.cfg

[metadata]
name = ewatercycle-model-testing
version = 0.0.3
description = Comprehensive and flexible testing framework for hydrological model plugins that intend to integrate with the eWaterCycle platform.
long_description = file: README.md
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
author = Ferdi Helvensteijn, Konrad Gniaź, Alexander van den Arend Schmidt, Robert Mertens, Floris van der Voorn
author_email = a.f.helvensteijn@student.tudelft.nl, k.gniaz@student.tudelft.nl, a.f.vandenarendschmidt@student.tudelft.nl, r.h.mertens@student.tudelft.nl, f.c.g.vandervoorn@student.tudelft.nl


[tool:pytest]
testpaths = tests

# pytest files, classes and functions are named using the following pattern:
# preferable use "validate" instead of "test" to reduce ambiguity.
python_files = validate_*.py test_*
python_classes = Validate* Test*
python_functions = validate_* test_*

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    PyYAML
    ewatercycle~=2.1.0
    ewatercycle-hype==0.0.1
    ewatercycle-leakybucket==0.0.2
    ewatercycle-lisflood==0.0.1
    ewatercycle-marrmot==0.0.2
    ewatercycle-pcrglobwb==0.0.2
    ewatercycle-wflow==0.0.2
    markdown2
    Cython~=3.0.10
    netCDF4~=1.6.5
    ttkbootstrap~=1.10.1
    xarray~=2024.5.0
    era5cli

[options.extras_require]
dev =
    pytest~=8.2.0
    pylint==3.2.3
    isort==5.13.2

[options.packages.find]
where = src